--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="DeepPurple500">#673AB7</color>
     <color name="DeepPurple700">#512DA8</color>
     <color name="Teal500">#009688</color>
+    <color name="Black">#FFFFFF</color>
 </resources>
