--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- A RecyclerView with some commonly used attributes -->
+            <!--This is the main list of notifications-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/notification_list_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
             <!--The main floating action button-->
             <android.support.design.widget.FloatingActionButton
                 xmlns:app="http://schemas.android.com/apk/res-auto"
