--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/navigation_item_1"
+            android:id="@+id/notification_list_item"
             android:checked="true"
             android:icon="@drawable/ic_launcher"
-            android:title="HELLO WORLD"/>
+            android:title="Blasts"/>
         <item
-            android:id="@+id/navigation_item_2"
+            android:id="@+id/group_list_item"
             android:icon="@drawable/ic_launcher"
-            android:title="WHO GIRL???"/>
+            android:title="Groups"/>
     </group>
 
 </menu>
