--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="DeepPurple500">#673AB7</color>
     <color name="DeepPurple700">#512DA8</color>
     <color name="Teal500">#009688</color>
-    <color name="Black">#FFFFFF</color>
+
+    <color name="Black">#000000</color>
+    <color name="White">#FFFFFF</color>
+    <color name="Clear">#00000000</color>
 </resources>
