--- a/app/src/main/res/layout/notification_list_fragment.xml
+++ b/app/src/main/res/layout/notification_list_fragment.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <!-- A RecyclerView with some commonly used attributes -->
+    <!--This is the main list of notifications-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/notification_list_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <!--The main floating action button-->
+    <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/notification_button_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_white_48dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="48dp"
+        android:layout_marginBottom="32dp"
+        android:layout_gravity="bottom|right"
+        app:elevation="4dp"
+        app:borderWidth="0dp"/>
+</FrameLayout>
