Fixed toolbar and some other stuff.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="BlastTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+    <style name="BlastTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/DeepPurple500</item>
         <item name="colorPrimaryDark">@color/DeepPurple700</item>
         <item name="colorAccent">@color/Teal500</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
