--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,11 @@
     android:layout_height="match_parent" android:paddingLeft="0dp"
     android:paddingTop="0dp"
     tools:context=".MainActivity"
-    android:gravity="bottom|right"
-    android:fitsSystemWindows="true">
+    android:gravity="bottom|right">
+
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
 
     <!-- The Navigation Drawer-->
     <android.support.v4.widget.DrawerLayout
@@ -14,7 +17,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_below="@id/toolbar">
+
 
         <!-- Navigation view -->
         <android.support.design.widget.NavigationView
@@ -24,5 +28,6 @@
             android:layout_gravity="start"
             app:menu="@menu/menu_navigation"/>
     </android.support.v4.widget.DrawerLayout>
+
 
 </RelativeLayout>
