--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,35 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent" android:paddingLeft="0dp"
-    android:paddingTop="0dp"
-    tools:context=".MainActivity"
-    android:gravity="bottom|right">
-
-    <include layout="@layout/toolbar"
-        android:id="@+id/toolbar"/>
+    android:id="@+id/navigation_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
 
-    <!-- The Navigation Drawer-->
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/navigation_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        android:layout_height="match_parent">
 
 
-        <!-- Navigation view -->
-        <android.support.design.widget.NavigationView
-            android:id="@+id/navigation_view"
-            android:layout_width="wrap_content"
+        <include layout="@layout/toolbar"
+            android:id="@+id/toolbar"/>
+
+        <FrameLayout
+            android:id="@+id/main_content_frame"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@menu/menu_navigation"/>
-    </android.support.v4.widget.DrawerLayout>
+            android:layout_below="@id/toolbar"/>
+
+    </RelativeLayout>
 
 
-</RelativeLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/menu_navigation" />
+
+
+</android.support.v4.widget.DrawerLayout>
