-Firebase groups are integrated into the ui -GroupManager class can now be used to control groups -Minor ui changes

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- Toolbar theme. -->
+    <style name="ToolbarTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/DeepPurple500</item>
+        <item name="colorPrimaryDark">@color/DeepPurple700</item>
+        <item name="colorAccent">@color/Teal500</item>
+        <item name="android:textColorPrimary">@color/White</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
