--- a/app/src/main/res/layout/group_list_item.xml
+++ b/app/src/main/res/layout/group_list_item.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/listPreferredItemHeight"
             android:padding="6dip"
-            android:descendantFocusability="blocksDescendants">
+            android:descendantFocusability="blocksDescendants"
+            android:onClick="openMessages">
 
             <ImageView
                 android:id="@+id/icon"
