--- a/app/src/main/res/layout/group_list_fragment.xml
+++ b/app/src/main/res/layout/group_list_fragment.xml
@@ -24,6 +24,7 @@
         android:layout_marginRight="48dp"
         android:layout_marginBottom="32dp"
         android:layout_gravity="bottom|right"
+        android:onClick="newGroup"
         app:elevation="4dp"
         app:borderWidth="0dp"/>
 </FrameLayout>
