--- a/app/src/main/res/layout/group_list_fragment.xml
+++ b/app/src/main/res/layout/group_list_fragment.xml
@@ -17,7 +17,7 @@
         android:id="@+id/group_button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add_white_48dp"
+        android:src="@drawable/ic_add_white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
