--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="98dp"
         android:layout_gravity="bottom"
-        android:visibility="visible"
+        android:visibility="gone"
         android:gravity="bottom"
         android:layout_alignParentBottom="true">
 
