--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,11 +7,22 @@
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar"/>
 
+    <!-- A RecyclerView with some commonly used attributes -->
+    <!--This is the main list of messages-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/message_list_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar" />
+
     <RelativeLayout android:id="@+id/post_view"
         android:layout_width="match_parent"
         android:layout_height="98dp"
         android:layout_gravity="bottom"
-        android:visibility="visible"
+        android:visibility="gone"
         android:gravity="bottom"
         android:layout_alignParentBottom="true">
 
@@ -80,13 +91,4 @@
 
     </RelativeLayout>
 
-    <!-- A RecyclerView with some commonly used attributes -->
-    <!--This is the main list of messages-->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/message_list_view"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:layout_above="@id/post_view"/>
 </RelativeLayout>
