--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/find_groups_list_item"
             android:icon="@drawable/ic_launcher"
-            android:title="FInd Groups"/>
+            android:title="Find Groups"/>
     </group>
 
 </menu>
